--- a/html/index.html
+++ b/html/index.html
@@ -17,14 +17,18 @@
 	<script src="../js/slick.min.js"></script>
 </head>
 <body>
-	<div class="stage-wrapper">
-		<div class="bg-wrap"></div>
-		<div class="bg-wrap"></div>
-		<div class="bg-wrap"></div>
-        <div class="wrapper">
-            
-        </div>
+	<div class="bg-wrapper">
+		<div class="bg-wrap bg2 bi-cloud-snow"></div>
+		<div class="bg-wrap bg3 bi-cloud-snow"></div>
 	</div>
+	<div class="stage-wrapper">
+			<div class="wrapper">
+				<div class="bg-wrap bg1 bi-cloud-snow"></div>
+			</div>
+	</div>
+
+
+
 	<script src="../js/index.js"></script>
 </body>
 </html>
